Made webpage more responsive to mobile layouts. Updated socials

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <li>
                         <a href="#contact-me">Contact</a>
                     </li>
+                    <li>
+                        <a href="./assets/Resume/Pasgen Manley Resume Developer.pdf" target="_Blank">Resume</a>
+                    </li>
                 </ul>
             </nav>
             <div class="home-wrap">
@@ -57,25 +60,24 @@
                 PORTFOLIO
             </h1>
             <div class="container-projects">
-                <a class="box-main" href="https://www.youtube.com/watch?v=uhND7Mvp3f4">
+                <a class="box-main" href="https://scottyv6.github.io/SongStar/" target="_blank">
                     <div>
-                        <h3>Latest Project</h3>
-                        <p>*What languages were used*</p>
+                        <h3>SongStar</h3>
+                        <p>Javascript / jQuery</p>
                     </div>
                 </a>
-                <a class="box-1" href="https://www.youtube.com/watch?v=uOa-ObWPAKg&ab_channel=VergilloVergillo">
+                <a class="box-1" href="https://pasgen-manley.github.io/pasgen-manley-code-quiz/" target="_blank">
                     <div>
-                        <h3>Latest Project</h3>
-                        <p>*What languages were used*</p>
+                        <h3>Coding Quiz Challenge</h3>
+                        <p>Javascript / jQuery</p>
                     </div>
                 </a>
-                <a class="box-2" href="https://www.apple.com/au/mac/?afid=p238%7Cs6jdD7fuI-dc_mtid_18707vxu38484_pcrid_519192729085_pgrid_86797364073_&cid=aos-au-kwgo-mac--slid---product--">
-                    <div>
-                        <h3>Latest Project</h3>
-                        <p>*What languages were used*</p>
+                <a class="box-2" href="https://pasgen-manley.github.io/HW5-Day-Planner-Pasgen-Manley/" target="_blank">
+                        <h3>EasyPlan</h3>
+                        <p>Javascript / jQuery</p>
                     </div>
                 </a>
-                <a class="box-3" href="https://www.ammomarketing.com.au/">
+                <!--<a class="box-3" href="https://www.ammomarketing.com.au/">
                     <div>
                         <h3>Latest Project</h3>
                         <p>*What languages were used*</p>
@@ -86,7 +88,7 @@
                         <h3>Latest Project</h3>
                         <p>*What languages were used*</p>
                     </div>
-                </a>
+                </a>-->
             </div>
         </section>
 
@@ -119,9 +121,10 @@
 
         <footer>
             <ul>
-                <li class="social-media"><a href='https://www.facebook.com/pasgen.manley/'><img src="./assets/images/facebook.png" alt="Facebook" width="40" height="40"></a></li>
-                <li class="social-media"><a href='#'><img src="./assets/images/Twitter.png" alt="Twitter" width="40" height="40"></a></li>
-                <li class="social-media"><a href='https://github.com/Pasgen-Manley'><img src="./assets/images/GitHub.png" alt="GithHub" width="40" height="40"></a></li>
+                <li class="social-media"><a href='https://www.facebook.com/pasgen.manley/' target="_Blank"><img src="./assets/images/facebook.png" alt="Facebook" width="40" height="40"></a></li>
+                <li class="social-media"><a href='#'><img src="./assets/images/Twitter.png" target="_Blank" alt="Twitter" width="40" height="40"></a></li>
+                <li class="social-media"><a href='https://github.com/Pasgen-Manley' target="_Blank"><img src="./assets/images/GitHub.png" alt="GithHub" width="40" height="40"></a></li>
+                <li class="social-media"><a href="www.linkedin.com/in/pasgenmanley" target="_Blank"><img src="./assets/images/LI-In-Bug.png" alt="Linkedin" width="50" height="40"></a></li>
             </ul>
             <p>
                 Pasgen Manley <span> © 2021</span>
