--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                         <p>Javascript / jQuery</p>
                     </div>
                 </a>
-                <a class="box-2" href="https://pasgen-manley.github.io/HW5-Day-Planner-Pasgen-Manley/" target="_blank">
-                        <h3>EasyPlan</h3>
-                        <p>Javascript / jQuery</p>
+                <a class="box-2" href="https://morning-ravine-85802.herokuapp.com/" target="_blank">
+                        <h3>TheGoods.</h3>
+                        <p>Javascript / handlebars / MVC</p>
                     </div>
                 </a>
                 <!--<a class="box-3" href="https://www.ammomarketing.com.au/">
