--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a href="#contact-me">Contact</a>
                     </li>
                     <li>
-                        <a href="./assets/Resume/Pasgen Manley Resume Developer2.pdf" target="_Blank">Resume</a>
+                        <a href="" target="_Blank">Resume</a>
                     </li>
                 </ul>
             </nav>
